crates/term/src/snapshots/tome__tests__render_empty.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
"                                                                                "
