crates/term/src/snapshots/tome__tests__render_insert_mode.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1 Hello                                                                       "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" INSERT  test.txt  1:1  Top                                                     "
"                                                                                "
