crates/term/src/snapshots/tome__tests__render_with_content.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1 Hello, World!                                                               "
"  2 This is a test.                                                             "
"  3 Line 3.                                                                     "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
"                                                                                "
