crates/term/src/snapshots/tome__tests__wrapped_line_dim_gutter.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1 This is a very long line ·"
"  ┆ that should wrap to ······"
"  ┆ multiple virtual lines    "
"  ~                           "
"  ~                           "
"  ~                           "
"  ~                           "
"  ~                           "
" NORMAL  test.txt  1:1  Top   "
"                              "
